2009-04-28  Gordon Williams <gordon.williams@collabora.co.uk>

	Screen rotation transition implementation, and regression fix
	* src/util/hd-transition.h	
	* src/util/hd-transition.c: Added function to rotate and dim the screen
	* src/util/hd-util.c: Now, when rotate is called, do it in 4 steps:
	  rotate transition, XRandr call, wait, final rotate transition. 
	* data/transitions.ini: initial timings for rotate transitions added,
	  and put in a lot of comments
	* src/home/hd-render-manager.c: Fix for regression with stackable 
	  windows if in task navigator. Now we don't make any background 
	  windows visible if the task navigator is active.

2009-04-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: Added a set_visibilities call if the
	state changes from app mode to non-app mode, to solve problem with
	status menu having been moved off of the screen because it was
	deemed not to be visible. Fixes NB#112996

2009-04-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c: Adding helpful debug prints.

2009-04-28  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#112273 - Hildon-home customization features are broken in
	latest CP build.

	* src/hildon-desktop-views.schemas: Enable all four home views.

2009-04-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: Remove call to 
	  mb_adjust_dialog_title_position (as we never paid attention to 
	  it anyway). This stops theme change which causes dialog title
	  flickering sometimes

2009-04-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-home.h
	* src/home/hd-home.c: Partial fix for NB#109445, full fix for 
	  NB#111647, NB#109899, NB#109258. Make sure that when we leave
	  the HOME_EDIT_DLG state, we close any dialogs that might have	  
	  been open in it.
	* src/home/hd-render-manager.h: Now make sure we don't grab the